Added name and description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 	</head>
 	<body>
-		Hello world!
+		<h1>Juan Antona del Val</h1>
+		<p>An industrial engineer who discovered the magic of software and the wonderful human ability to create things that exist only in your mind...</p>
 	</body>
 </html>
