--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 		<h1>Juan Antona del Val</h1>
-		<p>An industrial engineer who discovered the magic of software and the wonderful human ability to create things that exist only in your mind...</p>
+		<p>An industrial engineer who discovered the <strong>magic of software</strong> and the wonderful human ability to <strong>create things</strong> that exist only in your mind...</p>
 	</body>
 </html>
